# CMakeCustomCommandBug

./: CMakeLists.txt  bar_generator.cxx  foo.cxx  foo.h  foo.ui  launcher.bat.in
